# glucose-sensor

./: CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
firmware/: CMakeLists.txt  README.md  ads1115.h  ble_manager.h  config.h  drift_compensation.c  drift_compensation.h  glucose_sensor.c  glucose_sensor.h  glucose_service.c  linkerscript.ld  log.c  log.h  rtc.c  rtc.h  toolchain-arm-none-eabi.cmake  toolchain.cmake
firmware/.github/workflows/: main.yml
firmware/0874e603-8670-4865-813f-610605c9899f/: README.md
firmware/0874e603-8670-4865-813f-610605c9899f/src/: README.md  ads1115.c  ads1115.h  config.h  main.c
firmware/21128e07-6240-4999-acea-388aa70a67a1/: README.md
firmware/21128e07-6240-4999-acea-388aa70a67a1/src/: README.md  config.h  glucose_filter.c  glucose_filter.h  main.c
firmware/327426a8-a43e-4449-abe2-c8473adbcb26/: README.md
firmware/327426a8-a43e-4449-abe2-c8473adbcb26/src/: README.md  config.h  glucose_filter.c  glucose_filter.h  main.c  nvm_storage.h
firmware/5b756d7a-771d-41ac-b62d-c99135a5555b/: README.md
firmware/5b756d7a-771d-41ac-b62d-c99135a5555b/src/: README.md  ads1115.c  config.h  i2c_driver.c  i2c_driver.h  main.c
firmware/64e5ed33-ffb9-44e9-b5c4-f86dda058abf/: README.md
firmware/64e5ed33-ffb9-44e9-b5c4-f86dda058abf/src/: README.md  ads1115_driver.c  ads1115_driver.h  config.h  i2c_driver.c  i2c_driver.h  main.c
firmware/6dd47b22-c9e4-438e-a2da-08cdbcbe7fdc/: README.md
firmware/6dd47b22-c9e4-438e-a2da-08cdbcbe7fdc/app/: CMakeLists.txt
firmware/6dd47b22-c9e4-438e-a2da-08cdbcbe7fdc/app/src/: main.c
firmware/6dd47b22-c9e4-438e-a2da-08cdbcbe7fdc/src/: README.md  config.h
firmware/8441dae0-606d-4483-bb3f-0d3fd3376046/: README.md
firmware/8441dae0-606d-4483-bb3f-0d3fd3376046/src/: README.md  ble_manager.c  config.h  glucose_service.h  main.c  power_manager.c  power_manager.h  sensor_manager.c  sensor_manager.h
firmware/8c64b9ca-758a-4e57-b44f-aa8aed5fdffc/: README.md
firmware/8c64b9ca-758a-4e57-b44f-aa8aed5fdffc/src/: README.md  glucose_filter.c  glucose_filter.h  main.c  nvm.c
firmware/98a3eb51-6ccd-4018-8df1-6215346252b7/: README.md
firmware/98a3eb51-6ccd-4018-8df1-6215346252b7/app/: CMakeLists.txt
firmware/98a3eb51-6ccd-4018-8df1-6215346252b7/app/src/: main.c
firmware/98a3eb51-6ccd-4018-8df1-6215346252b7/src/: CMakeLists.txt  README.md
firmware/app/inc/: app_config.h
firmware/app/src/: CMakeLists.txt  main.c
firmware/bd9cf347-69bd-408c-bccf-8cbb03f58d0c/: README.md
firmware/bd9cf347-69bd-408c-bccf-8cbb03f58d0c/src/: README.md  ads1115_driver.c  ads1115_driver.h  config.h  i2c_driver.c  i2c_driver.h  main.c
firmware/ble/: CMakeLists.txt
firmware/ble/inc/: ble_config.h
firmware/cc0eb72b-0a13-476a-a5c5-ab5e4b023f01/: README.md
firmware/cc0eb72b-0a13-476a-a5c5-ab5e4b023f01/src/: README.md  ads1115_driver.h  config.h  main.c  sensor_sampling.c  sensor_sampling.h  timer_driver.h
firmware/cmake/: toolchain-arm-none-eabi.cmake
firmware/common/: CMakeLists.txt  CMakeLists_legacy.txt  utils.h
firmware/common/inc/: utils.h  utils_legacy.h
firmware/common/src/: utils.c  utils_legacy.c
firmware/config/: CMakeLists.txt  nrf52832_xxaa.ld  nrf52832_xxaa_legacy.ld  sdk_config.h  sdk_config_legacy.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/inc/: ads1115.h  driver_config.h  i2c.h
firmware/drivers/src/: ads1115.c  i2c.c
firmware/e875daab-a042-4bf1-b734-94abb86b1d59/: README.md
firmware/e875daab-a042-4bf1-b734-94abb86b1d59/.github/workflows/: main.yml
firmware/e875daab-a042-4bf1-b734-94abb86b1d59/drivers/: gpio.c  gpio.h  uart.c  uart.h
firmware/e875daab-a042-4bf1-b734-94abb86b1d59/src/: CMakeLists.txt  README.md  config.h  main.c  toolchain.cmake
firmware/ec680ca5-bde5-42cb-99ef-4cc5e3173bb4/: README.md
firmware/ec680ca5-bde5-42cb-99ef-4cc5e3173bb4/src/: README.md  config.h  glucose_filter.c  glucose_filter.h  main.c
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/: README.md
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/app/: CMakeLists.txt
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/app/src/: main.c
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/ble/: CMakeLists.txt
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/common/: utils.c
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/config/: CMakeLists.txt
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/drivers/: CMakeLists.txt
firmware/f25735be-8bbd-4eae-8d40-aba8ab8baa5f/src/: README.md
firmware/include/: glucose_filter.h
firmware/root/: CMakeLists.txt
firmware/src/: glucose_filter.c
include/: config.h
linker_scripts/: nrf52_flash.ld
src/: CMakeLists.txt  main.c
tests/a39cb224-4dbe-486d-adf3-b8cebd7b3149/: README.md  glucose_filter.c  glucose_filter.h  glucose_filter_config.c  glucose_filter_config.h  glucose_processing_pipeline.c  glucose_processing_pipeline.h  mock_drift_compensation.c  mock_drift_compensation.h  mock_glucose_calculation.c  mock_glucose_calculation.h  mock_os_primitives.c  mock_os_primitives.h  mock_timer.c  mock_timer.h  os_primitives.h  test_main.c
